List of features / changes made / release notes, in reverse chronological order.
If not stated, FINUFFT is assumed (cuFINUFFT <=1.3 is listed separately).

Master, working towards V 2.4.0 (1/7/25)

* unified separate-dim arrays (eg X,Y,Z->XYZ), simplifiying core (Reinecke #592)
* exit codes of many-vector tests now insensitive to one-mode randomness
  (Barnett)
* various bugfixes (DUCC+Python, Python dtype chk, Fortran opts)
* Large re-org of CPU lib code to remove C-style macros (Martin Reinecke)
  PR 558: de-macroize FFT (FFT plan now a class), and OMP funcs.
  PR 567: replace dual-pass compilation to .o and _32.o by C++ templating.
  - all FLT/CPX macros replaced by templating in main lib (not in test codes).
  - finufft_plan changed from struct to class, with setpts/exec methods.
  - spreadinterp reversed order of funcs to avoid fwd declarations.
  - finufft.cpp and defs.h replaced by finufft_core.{h,cpp}.
  PR 584: follow-up, more idiomatic C++.
  - simplify finufft_core internals via class members instead of struct fields.
  - all array allocations std::vectors or xsimd-aligned, removing FFT's allocs.
  - math consts such as PI change from macros to templated static consts.
  - C++ style error handling ("throw") replaces ier, except in C-API wrapper.
  - simpleinterfaces -> c_interfaces. Shorthands for types ("using f64=" etc).
  Note: tests still use macros (test_defs.h). And C++ interface will solidify.
* Single-argument spreading kernel Horner evaluator available for deconv step
  (onedim_* funcs), to unify ker eval. PR 541, Libin Lu. Not yet exploited.
* Simplify building of Python source distributions. PR 555 (J Anden).
* reduced roundoff error in a[n] phase calc in CPU onedim_fseries_kernel().
   PR534 (Barnett).
* GPU code type 1,2 also reduced round-off error in phases, to match CPU code;
  rationalized onedim_{fseries,nuft}_* GPU codes to match CPU (Barbone, Barnett)
* Added type 3 in 1D, 2D, and 3D, in the GPU library cufinufft. PR #517, Barbone